--- a/template/about.html
+++ b/template/about.html
@@ -18,36 +18,63 @@
 <section class="ftco-section">
  <div class="container">
   <div class="row justify-content-center pb-5">
+
+    {% for p in AboutPromoTitle %}
     <div class="col-lg-6 heading-section text-center ftco-animate">
-      <h2 class="mb-4">More than <span>35+</span> years we provide <span>IT Solution</span></h2>
-      <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+      <h2 class="mb-4">{{ p.promo_head_title }}  B2B Solution</span></h2>
+      <p>{{ p.promo_head_sub_content }}</p>
     </div>
+    {% endfor %}
+
   </div>
+
   <div class="row">
+
+  {% for pl in AboutLeftPromo %}
+
+    {% if pl.plank_left == True %}
    <div class="col-md-4">
     <div class="services-2 text-center">
      <div class="icon">
-      <span class="flaticon-web-programming"></span>
+      <img src="{{ pl.icon.url }}" width="60" height="53" alt="icon"/>
     </div>
     <div class="text">
-      <h3>Web Development</h3>
-      <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+      <h3>{{ pl.title }}</h3>
+      <p>{{ pl.sub_content }}</p>
     </div>
   </div>
+  {% endif %}
+
+
+  {% endfor %}
+
+
 </div>
+
+{% for pl in AboutMedelPromo %}
 <div class="col-md-4">
-  <img src="images/services.svg" class="img-fluid" alt="">
+  <img src="{{ pl.image.url }}" width="350" height="330" class="img-fluid" alt="">
 </div>
+{% endfor %}
+
+
+{% for pl in AboutRightPromo %}
+
+{% if pl.plank_right == True %}
 <div class="col-md-4">
   <div class="services-2 text-center">
    <div class="icon">
-    <span class="flaticon-secure"></span>
+    <img src="{{ pl.icon.url }}" width="60" height="53" alt="icon"/>
   </div>
   <div class="text">
-    <h3>Server Security</h3>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+    <h3>{{ pl.title }}</h3>
+    <p>{{ pl.sub_content }}</p>
   </div>
 </div>
+{% endif %}
+
+{% endfor %}
+
 </div>
 </div>
 </div>
@@ -56,21 +83,31 @@
 <section class="ftco-counter ftco-section ftco-no-pt img" id="section-counter">
  <div class="container">
   <div class="row no-gutters d-flex">
-   <div class="col-md-6 d-flex">
-    <div class="img d-flex align-self-stretch" style="background-image:url({% static '' %});"></div>
+
+  {% for ab in about %}
+  <div class="col-md-6 d-flex">
+    <div class="img d-flex align-self-stretch" style="background-image:url({{ ab.left_banner_image.url }});"></div>
   </div>
+  {% endfor %}
+
+
+  {% for ab in about %}
   <div class="col-md-6 p-3 pl-md-5 py-5 bg-primary">
     <div class="row justify-content-start pb-3">
       <div class="col-md-12 heading-section heading-section-white ftco-animate">
-        <h2 class="mb-4">Consult us here in <span>ITSolution</span></h2>
-        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+        <h2 class="mb-4">{{ ab.title }} <span>B2BSolution</span></h2>
+        <p>{{ ab.sub_content }}</p>
       </div>
     </div>
+  {% endfor %} 
+
+
+    {% for abCount in about %}
     <div class="row">
       <div class="col-md-6 justify-content-center counter-wrap ftco-animate">
         <div class="block-18 mb-4">
           <div class="text">
-            <strong class="number" data-number="750">0</strong>
+            <strong class="number" data-number="{{ abCount.Project_Complete }}">0</strong>
             <span>Project Complete</span>
           </div>
         </div>
@@ -78,7 +115,7 @@
       <div class="col-md-6 justify-content-center counter-wrap ftco-animate">
         <div class="block-18 mb-4">
           <div class="text">
-            <strong class="number" data-number="568">0</strong>
+            <strong class="number" data-number="{{ abCount.Happy_Clients }}">0</strong>
             <span>Happy Clients</span>
           </div>
         </div>
@@ -86,7 +123,7 @@
       <div class="col-md-6 justify-content-center counter-wrap ftco-animate">
         <div class="block-18 mb-4">
           <div class="text">
-            <strong class="number" data-number="478">0</strong>
+            <strong class="number" data-number="{{ abCount.Business_Partners }}">0</strong>
             <span>Business Partners</span>
           </div>
         </div>
@@ -94,12 +131,16 @@
       <div class="col-md-6 justify-content-center counter-wrap ftco-animate">
         <div class="block-18 mb-4">
           <div class="text">
-            <strong class="number" data-number="780">0</strong>
-            <span>IT Consultant</span>
+            <strong class="number" data-number="{{ abCount.B2b_Consultant }}">0</strong>
+            <span>B2B Consultant</span>
           </div>
         </div>
       </div>
     </div>
+    {% endfor %}
+
+
+
   </div>
 </div>
 </div>
@@ -117,60 +158,23 @@
   <div class="row ftco-animate">
     <div class="col-md-12 testimonial">
       <div class="carousel-testimony owl-carousel ftco-owl">
+        
+        
+        {% for itemActive in AboutTeam %}
         <div class="item">
-          <div class="testimony-wrap d-flex align-items-stretch" style="background-image: url({% static 'images/testimony-1.jpg' %});">
+          <div class="testimony-wrap d-flex align-items-stretch" style="background-image: url({{ itemActive.image.url }});">
            <div class="overlay"></div>
            <div class="text">
              <div class="line"></div>
-             <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-             <p class="name">Donna Scott</p>
-             <span class="position">Marketing Manager</span>
+             <p class="mb-4">{{ itemActive.worker_about }}</p>
+             <p class="name">{{ itemActive.user.username }}</p>
+             <span class="position">{{ itemActive.department.name }}</span>
            </div>
          </div>
        </div>
-       <div class="item">
-        <div class="testimony-wrap d-flex align-items-stretch" style="background-image: url({% static 'images/testimony-2.jpg' %});">
-         <div class="overlay"></div>
-         <div class="text">
-           <div class="line"></div>
-           <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-           <p class="name">Roger Scott</p>
-           <span class="position">Interface Designer</span>
-         </div>
-       </div>
-     </div>
-     <div class="item">
-      <div class="testimony-wrap d-flex align-items-stretch" style="background-image: url({% static 'images/testimony-3.jpg' %});">
-       <div class="overlay"></div>
-       <div class="text">
-         <div class="line"></div>
-         <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-         <p class="name">Roger Scott</p>
-         <span class="position">UI Designer</span>
-       </div>
-     </div>
-   </div>
-   <div class="item">
-    <div class="testimony-wrap d-flex align-items-stretch" style="background-image: url({% static 'images/testimony-4.jpg' %});">
-     <div class="overlay"></div>
-     <div class="text">
-       <div class="line"></div>
-       <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-       <p class="name">Roger Scott</p>
-       <span class="position">Web Developer</span>
-     </div>
-   </div>
- </div>
- <div class="item">
-  <div class="testimony-wrap d-flex align-items-stretch" style="background-image: url({% static 'images/testimony-5.jpg' %});">
-   <div class="overlay"></div>
-   <div class="text">
-     <div class="line"></div>
-     <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-     <p class="name">Roger Scott</p>
-     <span class="position">System Analyst</span>
-   </div>
- </div>
+       {% endfor %}
+
+
 </div>
 </div>
 </div>
@@ -182,7 +186,7 @@
  <div class="container">
   <div class="row">
    <div class="col-lg-6 order-md-last">
-    <div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-center mb-4 mb-sm-0" style="background-image:url(images/about.jpg);">
+    <div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-center mb-4 mb-sm-0" style="background-image:url({% static 'images/about.jpg' %});">
     </div>
     <div class="d-flex mt-3">
      <div class="img img-2 mr-md-2 w-100" style="background-image:url({% static 'images/about-1.jpg' %});"></div>
@@ -192,89 +196,38 @@
 
  <div class="col-lg-6">
   <div class="heading-section mb-5 mt-5 mt-lg-0">
-   <h2 class="mb-3">Frequently Asks Questions</h2>
+   <h2 class="mb-3">Plans & Pricing</h2>
  </div>
  <div id="accordion" class="myaccordion w-100" aria-multiselectable="true">
-  <div class="card">
-    <div class="card-header p-0" id="headingOne">
-      <h2 class="mb-0">
-        <button href="#collapseOne" class="d-flex py-3 px-4 align-items-center justify-content-between btn btn-link" data-parent="#accordion" data-toggle="collapse" aria-expanded="true" aria-controls="collapseOne">
-         <p class="mb-0">How can we help your business?</p>
-         <i class="fa" aria-hidden="true"></i>
-       </button>
-     </h2>
-   </div>
-   <div class="collapse show" id="collapseOne" role="tabpanel" aria-labelledby="headingOne">
-    <div class="card-body py-3 px-0">
-     <ol>
-      <li>Far far away, behind the word mountains</li>
-      <li>Consonantia, there live the blind texts</li>
-      <li>When she reached the first hills of the Italic Mountains</li>
-      <li>Bookmarksgrove, the headline of Alphabet Village</li>
-      <li>Separated they live in Bookmarksgrove right</li>
-    </ol>
-  </div>
-</div>
-</div>
 
-<div class="card">
-  <div class="card-header p-0" id="headingTwo" role="tab">
-    <h2 class="mb-0">
-      <button href="#collapseTwo" class="d-flex py-3 px-4 align-items-center justify-content-between btn btn-link" data-parent="#accordion" data-toggle="collapse" aria-expanded="false" aria-controls="collapseTwo">
-       <p class="mb-0">How long does it take to build a website?</p>
-       <i class="fa" aria-hidden="true"></i>
-     </button>
-   </h2>
- </div>
- <div class="collapse" id="collapseTwo" role="tabpanel" aria-labelledby="headingTwo">
-  <div class="card-body py-3 px-0">
-   <ol>
-    <li>Far far away, behind the word mountains</li>
-    <li>Consonantia, there live the blind texts</li>
-    <li>When she reached the first hills of the Italic Mountains</li>
-    <li>Bookmarksgrove, the headline of Alphabet Village</li>
-    <li>Separated they live in Bookmarksgrove right</li>
-  </ol>
-</div>
-</div>
-</div>
 
-<div class="card">
-  <div class="card-header p-0" id="headingThree" role="tab">
-    <h2 class="mb-0">
-      <button href="#collapseThree" class="d-flex py-3 px-4 align-items-center justify-content-between btn btn-link" data-parent="#accordion" data-toggle="collapse" aria-expanded="false" aria-controls="collapseThree">
-       <p class="mb-0">Can I help your IT Solution for business?</p>
-       <i class="fa" aria-hidden="true"></i>
-     </button>
-   </h2>
- </div>
- <div class="collapse" id="collapseThree" role="tabpanel" aria-labelledby="headingTwo">
-  <div class="card-body py-3 px-0">
-   <ol>
-    <li>Far far away, behind the word mountains</li>
-    <li>Consonantia, there live the blind texts</li>
-    <li>When she reached the first hills of the Italic Mountains</li>
-    <li>Bookmarksgrove, the headline of Alphabet Village</li>
-    <li>Separated they live in Bookmarksgrove right</li>
-  </ol>
-</div>
-</div>
-</div>
+{% for item in service_price %}
 
-<div class="card">
-  <div class="card-header p-0" id="headingFour" role="tab">
-    <h2 class="mb-0">
-      <button href="#collapseFour" class="d-flex py-3 px-4 align-items-center justify-content-between btn btn-link" data-parent="#accordion" data-toggle="collapse" aria-expanded="false" aria-controls="collapseFour">
-       <p class="mb-0">What are those requirements for ITSolutions?</p>
-       <i class="fa" aria-hidden="true"></i>
-     </button>
-   </h2>
- </div>
- <div class="collapse" id="collapseFour" role="tabpanel" aria-labelledby="headingTwo">
-  <div class="card-body py-3 px-0">
-   <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
- </div>
-</div>
+  {% if item.draft == True %}
+    <div class="card">
+      <div class="card-header p-0" id="headingThree" role="tab">
+        <h2 class="mb-0">
+        <button href="#collapseThree" class="d-flex py-3 px-4 align-items-center justify-content-between btn btn-link" data-parent="#accordion" data-toggle="collapse" aria-expanded="false" aria-controls="collapseThree">
+        <p class="mb-0">{{ item.title }}</p>
+        <i class="fa" aria-hidden="true"></i>
+        </button>
+      </h2>
+      </div>
+
+      <div class="collapse" id="collapseThree" role="tabpanel" aria-labelledby="headingTwo">
+      <div class="card-body py-3 px-0">
+      <ol>
+        <li>{{ item.content|safe }}</li>
+
+      </ol>
+
+      <a href="" class="btn btn-primary">Contact</a>
+      <a href="" class="btn btn-primary">Order</a>
+    </div>
+  {% endif %}
+
+  {% endfor %}
+
 </div>
 </div>
 </div>
