--- a/template/blog.html
+++ b/template/blog.html
@@ -19,115 +19,32 @@
 <section class="ftco-section bg-light">
   <div class="container">
     <div class="row d-flex">
-      <div class="col-md-4 d-flex ftco-animate">
-       <div class="blog-entry justify-content-end">
-        <a href="blog-single.html" class="block-20" style="background-image: url('{% static 'images/image_1.jpg' %}');">
-        </a>
-        <div class="text mt-3 float-right d-block">
-         <div class="d-flex align-items-center pt-2 mb-4 topp">
-          <div class="one">
-           <span class="day">29</span>
-         </div>
-         <div class="two pl-1">
-           <span class="yr">2020</span>
-           <span class="mos">June</span>
-         </div>
-       </div>
-       <h3 class="heading"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
-     </div>
-   </div>
- </div>
- <div class="col-md-4 d-flex ftco-animate">
-   <div class="blog-entry justify-content-end">
-    <a href="blog-single.html" class="block-20" style="background-image: url('{% static 'images/image_2.jpg' %}');">
-    </a>
-    <div class="text mt-3 float-right d-block">
-     <div class="d-flex align-items-center pt-2 mb-4 topp">
-      <div class="one">
-       <span class="day">29</span>
-     </div>
-     <div class="two pl-1">
-       <span class="yr">2020</span>
-       <span class="mos">June</span>
-     </div>
-   </div>
-   <h3 class="heading"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
- </div>
-</div>
-</div>
+
+
+{% for post in blog_post %}
 <div class="col-md-4 d-flex ftco-animate">
  <div class="blog-entry">
-  <a href="blog-single.html" class="block-20" style="background-image: url('{% static 'images/image_3.jpg' %}');">
+  <a href="{{ post.get_absolute_url }}" class="block-20" style="background-image: url('{{ post.image.url }}');">
   </a>
   <div class="text mt-3 float-right d-block">
    <div class="d-flex align-items-center pt-2 mb-4 topp">
     <div class="one">
-     <span class="day">29</span>
+     <span class="day">{{ post.timestamp|time:'j' }}</span>
    </div>
    <div class="two pl-1">
-     <span class="yr">2020</span>
-     <span class="mos">June</span>
+     <span class="yr">{{ post.timestamp|time:'Y' }}</span>
+     <span class="mos">{{ post.timestamp|time:'l' }}</span>
    </div>
  </div>
- <h3 class="heading"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
+ <h3 class="heading"><a href="{{ post.get_absolute_url }}">{{ post.title|truncatewords:7 }}...</a></h3>
+</div>
+{% endfor %}
+
 </div>
 </div>
+
 </div>
-<div class="col-md-4 d-flex ftco-animate">
- <div class="blog-entry justify-content-end">
-  <a href="blog-single.html" class="block-20" style="background-image: url('{% static 'images/image_4.jpg' %}');">
-  </a>
-  <div class="text mt-3 float-right d-block">
-   <div class="d-flex align-items-center pt-2 mb-4 topp">
-    <div class="one">
-     <span class="day">29</span>
-   </div>
-   <div class="two pl-1">
-     <span class="yr">2020</span>
-     <span class="mos">June</span>
-   </div>
- </div>
- <h3 class="heading"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
-</div>
-</div>
-</div>
-<div class="col-md-4 d-flex ftco-animate">
- <div class="blog-entry justify-content-end">
-  <a href="blog-single.html" class="block-20" style="background-image: url('{% static 'images/image_5.jpg' %}');">
-  </a>
-  <div class="text mt-3 float-right d-block">
-   <div class="d-flex align-items-center pt-2 mb-4 topp">
-    <div class="one">
-     <span class="day">29</span>
-   </div>
-   <div class="two pl-1">
-     <span class="yr">2020</span>
-     <span class="mos">June</span>
-   </div>
- </div>
- <h3 class="heading"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
-</div>
-</div>
-</div>
-<div class="col-md-4 d-flex ftco-animate">
- <div class="blog-entry">
-  <a href="blog-single.html" class="block-20" style="background-image: url('{% static 'images/image_6.jpg' %}');">
-  </a>
-  <div class="text mt-3 float-right d-block">
-   <div class="d-flex align-items-center pt-2 mb-4 topp">
-    <div class="one">
-     <span class="day">29</span>
-   </div>
-   <div class="two pl-1">
-     <span class="yr">2020</span>
-     <span class="mos">June</span>
-   </div>
- </div>
- <h3 class="heading"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
-</div>
-</div>
-</div>
-</div>
+
 <div class="row mt-5">
   <div class="col text-center">
     <div class="block-27">
