--- a/template/contact.html
+++ b/template/contact.html
@@ -8,7 +8,7 @@
 			<div class="row no-gutters slider-text align-items-end justify-content-center">
 				<div class="col-md-9 ftco-animate pb-5 text-center">
 					<h1 class="mb-3 bread">Contact us</h1>
-					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>Contact us <i class="fa fa-chevron-right"></i></span></p>
+					<p class="breadcrumbs"><span class="mr-2"><a href="{% url 'index' %}">Home <i class="fa fa-chevron-right"></i></a></span> <span>Contact us <i class="fa fa-chevron-right"></i></span></p>
 				</div>
 			</div>
 		</div>
@@ -37,7 +37,7 @@
 										<span class="fa fa-phone"></span>
 									</div>
 									<div class="text">
-										<p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+										<p><span>Phone:</span> <a href="tel://+88 01303781814">+88 01303781814</a></p>
 									</div>
 								</div>
 							</div>
@@ -47,7 +47,8 @@
 										<span class="fa fa-paper-plane"></span>
 									</div>
 									<div class="text">
-										<p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+										<p><span>Email:</span> <a href="mailto:b2bleadhut@gmail.com"> b2bleadhut@gmail.com
+</a></p>
 									</div>
 								</div>
 							</div>
@@ -57,7 +58,7 @@
 										<span class="fa fa-globe"></span>
 									</div>
 									<div class="text">
-										<p><span>Website</span> <a href="#">yoursite.com</a></p>
+										<p><span>Website</span> <a href="http://www.b2bleadhut.com">www.b2bleadhut.com</a></p>
 									</div>
 								</div>
 							</div>
@@ -67,29 +68,36 @@
 								<div class="contact-wrap w-100 p-md-5 p-4">
 									<h3 class="mb-4">Contact Us</h3>
 									<form method="POST" id="contactForm" name="contactForm" class="contactForm">
+										{% csrf_token %}
 										<div class="row">
 											<div class="col-md-6">
 												<div class="form-group">
 													<label class="label" for="name">Full Name</label>
-													<input type="text" class="form-control" name="name" id="name" placeholder="Name">
+													<input type="text" required class="form-control" name="name" id="name" placeholder="Name">
 												</div>
 											</div>
 											<div class="col-md-6"> 
 												<div class="form-group">
 													<label class="label" for="email">Email Address</label>
-													<input type="email" class="form-control" name="email" id="email" placeholder="Email">
+													<input type="email" required class="form-control" name="email" id="email" placeholder="Email">
 												</div>
 											</div>
 											<div class="col-md-12">
 												<div class="form-group">
 													<label class="label" for="subject">Subject</label>
-													<input type="text" class="form-control" name="subject" id="subject" placeholder="Subject">
+													<input type="text" required class="form-control" name="subject" id="subject" placeholder="Subject">
+												</div>
+											</div>
+											<div class="col-md-12">
+												<div class="form-group">
+													<label class="label" for="phone">Phone</label>
+													<input type="text" class="form-control" name="phone" id="phone" placeholder="Phone">
 												</div>
 											</div>
 											<div class="col-md-12">
 												<div class="form-group">
 													<label class="label" for="#">Message</label>
-													<textarea name="message" class="form-control" id="message" cols="30" rows="4" placeholder="Message"></textarea>
+													<textarea name="message" required class="form-control" id="message" cols="30" rows="4" placeholder="Message"></textarea>
 												</div>
 											</div>
 											<div class="col-md-12">
