--- a/template/footer.html
+++ b/template/footer.html
@@ -3,7 +3,7 @@
 			<div class="row mb-5">
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-footer-logo">IT<span>solution</span></h2>
+						<h2 class="ftco-footer-logo">B2B<span>solution</span></h2>
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 						<ul class="ftco-footer-social list-unstyled mt-2">
 							<li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
@@ -16,25 +16,18 @@
 					<div class="ftco-footer-widget mb-4 ml-md-5">
 						<h2 class="ftco-heading-2">Explore</h2>
 						<ul class="list-unstyled">
-							<li><a href="#" class="py-2 d-block">About</a></li>
-							<li><a href="#" class="py-2 d-block">Contact</a></li>
-							<li><a href="#" class="py-2 d-block">What We Do</a></li>
-							<li><a href="#" class="py-2 d-block">Plans &amp; Pricing</a></li>
-							<li><a href="#" class="py-2 d-block">Refund Policy</a></li>
-							<li><a href="#" class="py-2 d-block">Call Us</a></li>
+							<li><a href="{% url 'about' %}" class="py-2 d-block">About</a></li>
+							<li><a href="{% url 'contact' %}" class="py-2 d-block">Contact</a></li>
+							<li><a href="{% url 'refound_policy' %}" class="py-2 d-block">Refund Policy</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Legal</h2>
 						<ul class="list-unstyled">
-							<li><a href="#" class="py-2 d-block">Join Us</a></li>
-							<li><a href="#" class="py-2 d-block">Blog</a></li>
-							<li><a href="#" class="py-2 d-block">Privacy &amp; Policy</a></li>
-							<li><a href="#" class="py-2 d-block">Terms &amp; Conditions</a></li>
-							<li><a href="#" class="py-2 d-block">Careers</a></li>
-							<li><a href="#" class="py-2 d-block">Contact</a></li>
+							<li><a href="{% url 'blog' %}" class="py-2 d-block">Blog</a></li>
+							<li><a href="{% url 'privacy_and_policy' %}" class="py-2 d-block">Privacy &amp; Policy</a></li>
+							<li><a href="{% url 'terms_condition_view' %}" class="py-2 d-block">Terms &amp; Conditions</a></li>
 						</ul>
 					</div>
 				</div>
@@ -44,8 +37,8 @@
 						<div class="block-23 mb-3">
 							<ul>
 								<li><span class="icon fa fa-map marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-								<li><a href="#"><span class="icon fa fa-paper-plane pr-4"></span><span class="text">info@yourdomain.com</span></a></li>
+								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+8801303781814</span></a></li>
+								<li><a href="#"><span class="icon fa fa-paper-plane pr-4"></span><span class="text">b2bleadhut@gmail.com</span></a></li>
 							</ul>
 						</div>
 					</div>
