--- a/template/navbar.html
+++ b/template/navbar.html
@@ -2,7 +2,7 @@
 		<div class="container">
 			<div class="row justify-content-between">
 				<div class="col-12 col-md d-flex align-items-center">
-					<p class="mb-0 phone"><span class="mailus">Phone no:</span> <a href="#">+00 1234 567</a> or <span class="mailus">email us:</span> <a href="#">emailsample@email.com</a></p>
+					<p class="mb-0 phone"><span class="mailus">Phone no:</span> <a href="#"> +88 01303781814</a> or <span class="mailus">email us:</span> <a href="#"> b2bleadhut@gmail.com</a></p>
 				</div>
 				<div class="col-12 col-md d-flex justify-content-md-end">
 					<div class="social-media">
@@ -34,8 +34,6 @@
 					<li class="nav-item"><a href="{% url 'cases' %}" class="nav-link">Case Study</a></li>
 					<li class="nav-item"><a href="{% url 'blog' %}" class="nav-link">Blog</a></li>
 					<li class="nav-item"><a href="{% url 'contact' %}" class="nav-link">Contact us</a></li>
-					<li class="nav-item cta"><a href="#" class="nav-link">Free Consultation</a></li>
-
 				</ul>
 			</div>
 		</div>
